--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,167 @@
-streamlit==1.28.0
-langchain==0.1.20
-langchain-cohere==0.1.52
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiosignal==1.4.0
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+asgiref==3.9.1
+attrs==25.3.0
+backoff==2.2.1
+bcrypt==4.3.0
+black==25.1.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.8.3
+chardet==5.2.0
+charset-normalizer==3.4.3
+chroma-hnswlib==0.7.3
+chromadb==0.4.18
+click==8.2.1
+cohere==5.16.1
+colorama==0.4.6
+coloredlogs==15.0.1
+dataclasses-json==0.6.7
+Deprecated==1.2.18
+distro==1.9.0
+durationpy==0.10
+faiss-cpu==1.11.0.post1
+fastapi==0.116.1
+fastavro==1.11.1
+filelock==3.18.0
+flatbuffers==25.2.10
+frozenlist==1.7.0
+fsspec==2025.7.0
+git-filter-repo==2.47.0
+gitdb==4.0.12
+GitPython==3.1.45
+google-auth==2.40.3
+googleapis-common-protos==1.70.0
+greenlet==3.2.3
+grpcio==1.73.1
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.33.4
+humanfriendly==10.0
+idna==3.10
+importlib-metadata==6.11.0
+importlib_resources==6.5.2
+Jinja2==3.1.6
+joblib==1.5.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+kubernetes==33.1.0
+langchain==0.3.26
+langchain-cohere==0.3.5
+langchain-community==0.3.27
+langchain-core==0.3.69
+langchain-experimental==0.3.4
+langchain-text-splitters==0.3.8
+langsmith==0.4.15
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+mdurl==0.1.2
+mmh3==5.1.0
+mpmath==1.3.0
+multidict==6.6.3
+mypy_extensions==1.1.0
+narwhals==2.0.1
+networkx==3.5
+nltk==3.9.1
+numpy==1.26.4
+oauthlib==3.3.1
+onnxruntime==1.22.1
+opentelemetry-api==1.27.0
+opentelemetry-exporter-otlp-proto-common==1.27.0
+opentelemetry-exporter-otlp-proto-grpc==1.27.0
+opentelemetry-instrumentation==0.48b0
+opentelemetry-instrumentation-asgi==0.48b0
+opentelemetry-instrumentation-fastapi==0.48b0
+opentelemetry-proto==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+opentelemetry-util-http==0.48b0
+orjson==3.11.0
+overrides==7.7.0
+packaging==23.2
+pandas==2.3.1
+pandasql==0.7.3
+pathspec==0.12.1
+pillow==10.4.0
+platformdirs==4.3.8
+plotly==6.2.0
+posthog==6.1.1
+propcache==0.3.2
+protobuf==4.25.8
+pulsar-client==3.7.0
+pyarrow==21.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+pydeck==0.9.1
+Pygments==2.19.2
+pypdf==3.17.0
+PyPika==0.48.9
+pyreadline3==3.5.4
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
-pypdf==3.0.1
+pytz==2025.2
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.4
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==13.9.4
+rpds-py==0.27.0
+rsa==4.9.1
+safetensors==0.5.3
+scikit-learn==1.7.0
+scipy==1.16.0
 sentence-transformers==2.2.2
-pickle-mixin==1.0.2  # For saving/loading FAISS indexes
-faiss-cpu==1.8.0
-langchain-core==0.1.52
-langchain-community==0.0.38
+sentencepiece==0.2.0
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+SQLAlchemy==2.0.41
+starlette==0.47.1
+streamlit==1.28.0
+sympy==1.14.0
+tabulate==0.9.0
+tavily-python==0.7.10
+tenacity==8.5.0
+threadpoolctl==3.6.0
+tiktoken==0.9.0
+tokenizers==0.21.2
+toml==0.10.2
+torch==2.7.1
+torchvision==0.22.1
+tornado==6.5.2
+tqdm==4.67.1
+transformers==4.53.2
+typer==0.16.0
+types-requests==2.32.4.20250611
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.5.0
+uvicorn==0.35.0
+validators==0.35.0
+watchdog==6.0.0
+watchfiles==1.1.0
+websocket-client==1.8.0
+websockets==15.0.1
+wrapt==1.17.2
+yarl==1.20.1
+zipp==3.23.0
+zstandard==0.23.0
